Import of LAMPRECHT/Tk-PerlMethodList-0.04 from CPAN.
gitpan-cpan-distribution: Tk-PerlMethodList
gitpan-cpan-version:      0.04
gitpan-cpan-path:         LAMPRECHT/Tk-PerlMethodList-0.04.tar.gz
gitpan-cpan-author:       LAMPRECHT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,3 +6,7 @@ Revision history for Perl extension Tk::PerlMethodList.
 0.02  Set font in method list and code window to 'Courier' -reported by
       Slaven Rezic.
       Added bindings 'Control +' and 'Control -' to change fontsize.
+
+0.04  Use colored marks to indicate overridden methods and functions
+      for which sourcecode can be displayed.
+      Displays source packages for imported subs.
