--- a/README
+++ b/README
@@ -3,9 +3,14 @@ Tk-PerlMethodList version 0.01
 
 Tk::PerlMethodList is a Tk::Toplevel-derived widget.
 
-The window contains entry fields for a classname and a regex. A list below displays the subroutine-names in the package(s) of the given classname and its parent classes. The list will contain the sub-names present in the the symbol-table. It will therefore display imported subs as well. For the same reason it will not show subs which can be - but have not yet been autoloaded. It will show declared subs though. The 'Filter' entry takes a regex to filter the returned List of sub/methodnames.
 
-If the file containing a subroutine definition can be found in %INC, the sourcecode will be displayed by clicking on the subs list-entry.
+The window contains entry fields for a classname and a regex. The list below displays the subroutine-names in the package(s) of the given classname and its parent classes. The list will contain the sub-names present in the the symbol-table. It will therefore display imported subs as well. For the same reason it will not show subs which can be - but have not yet been autoloaded. It will show declared subs though. In case of imported subs, the last field of the row contains the aliased sub as reported by DevelPeek::CvGV. The 'Filter' entry takes a regex to filter the returned List of sub/methodnames.
+
+If the file containing a subroutine definition can be found in %INC, a green mark will be displayed at the beginning of the line. The sourcecode will be displayed by clicking on the subs list-entry.
+
+
+Method list and source window have Control-plus and Control-minus bindings to
+change fontsize.
 
 
 INSTALLATION
@@ -26,6 +31,7 @@ File::Slurp
 Tk
 Tk::LabEntry
 Tk::ROText
+Devel::Peek;
 
 COPYRIGHT AND LICENCE
 
