Import of LAMPRECHT/Tk-PerlMethodList-0.06 from CPAN.
gitpan-cpan-distribution: Tk-PerlMethodList
gitpan-cpan-version:      0.06
gitpan-cpan-path:         LAMPRECHT/Tk-PerlMethodList-0.06.tar.gz
gitpan-cpan-author:       LAMPRECHT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -12,3 +12,5 @@ Revision history for Perl extension Tk::PerlMethodList.
       Displays source packages for imported subs.
 
 0.05  Use B module to get more filenames. 
+
+0.06  Added NumEntry to control fontsize / increased fontsize range
